Bugfix mobile text out of view

--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -8,7 +8,7 @@
     max-width: 70%;
 }
 .material-chat .chat .message {
-    white-space: pre;
+    white-space: pre-line;
 }
 .material-chat .chat.right {
     margin-left: auto;
